--- a/config.yml
+++ b/config.yml
@@ -45,7 +45,7 @@ params:
         # disableFingerprinting: true
         favicon: "/favicon.ico"
         favicon16x16: "/favicon.ico"
-        favicon32x32: "<link/favicon.ico>"
+        favicon32x32: "/favicon.ico"
         apple_touch_icon: "<link/ abs url>"
         safari_pinned_tab: "<link/ abs url>"
 
