--- a/config.yml
+++ b/config.yml
@@ -44,10 +44,10 @@ params:
         # disableHLJS: true # to disable highlight.js
         # disableFingerprinting: true
         favicon: "/favicon.ico"
-        favicon16x16: "/favicon.ico"
-        favicon32x32: "/favicon.ico"
-        apple_touch_icon: "<link/ abs url>"
-        safari_pinned_tab: "<link/ abs url>"
+        #favicon16x16: "/favicon.ico"
+        #favicon32x32: "/favicon.ico"
+        #apple_touch_icon: "<link/ abs url>"
+        #safari_pinned_tab: "<link/ abs url>"
 
     label:
         text: "子 曰"  #左上标题文字
