--- a/config.yml
+++ b/config.yml
@@ -72,9 +72,8 @@ params:
     # home-info mode
     homeInfoParams:
         Title: "Welcom! \U0001F44B"
-        Content: 江南可采莲，莲叶何田田。  
-        鱼戏莲叶间。  
-        鱼戏莲叶东，鱼戏莲叶西，鱼戏莲叶南，鱼戏莲叶北。
+        Content:鱼戏莲叶间。  
+        
 
     socialIcons:
         - name: twitter
