--- a/config.yml
+++ b/config.yml
@@ -72,7 +72,7 @@ params:
     # home-info mode
     homeInfoParams:
         Title: "Hello World! \U0001F44B"
-        Content: Welcome to my blog 。  
+        Content: <p>鱼戏连夜间</p>  
         
 
     socialIcons:
