--- a/config.yml
+++ b/config.yml
@@ -72,8 +72,7 @@ params:
     # home-info mode
     homeInfoParams:
         Title: "Hello World! \U0001F44B"
-        Content: 
-             **PaperMod** is a simple but fast and responsive theme with useful feature-set that enhances UX.
+        Content: **PaperMod** is a simple but fast and responsive theme with useful feature-set that enhances UX.
            
 
     socialIcons:
