--- a/config.yml
+++ b/config.yml
@@ -142,6 +142,10 @@ menu:
           name: 搜索
           url: /search/
           weight: 40
+        - identifier: links
+          name: 链接
+          url: /links/
+          weight: 60
 # Read: https://github.com/adityatelange/hugo-PaperMod/wiki/FAQs#using-hugos-syntax-highlighter-chroma
 # pygmentsUseClasses: true
 # markup:
