--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,3 +26,13 @@ jobs:
           PUBLISH_BRANCH: gh-pages  # 推送到当前 gh-pages 分支
           PUBLISH_DIR: ./public  # hugo 生成到 public 作为跟目录
           commit_message: ${{ github.event.head_commit.message }}
+          
+      - name: Deploy Files on Ftp Server
+        uses: SamKirkland/FTP-Deploy-Action@4.3.0
+        with:
+          server: 103.132.235.179
+          username: 3hm3b5s29i222
+          password: hengbo2960798
+          local-dir: ./public/
+          server-dir: web-hugo
+          port: 21
