--- a/config.yml
+++ b/config.yml
@@ -80,13 +80,13 @@ params:
                     鱼戏莲叶东，鱼戏莲叶西，鱼戏莲叶南，鱼戏莲叶北。
            
 
-    socialIcons:
-        - name: buymeacoffee
-          url: 
-        - name: email
-          url: "mailto:mail100001@qq.com"
-        - name: rss
-          url: "https://i.ziyue.de/index.xml"
+    #socialIcons:
+        #- name: buymeacoffee
+        #  url: 
+        #- name: email
+        #  url: "mailto:mail100001@qq.com"
+        #- name: rss
+        #  url: "https://i.ziyue.de/index.xml"
 
     #analytics:
         #google:
