--- a/config.yml
+++ b/config.yml
@@ -12,7 +12,7 @@ buildDrafts: false
 buildFuture: false
 buildExpired: false
 enableEmoji: true
-pygmentsUseClasses: true
+pygmentsUseClasses: false
 # googleAnalytics: UA-123-45
 
 
