--- a/config.yml
+++ b/config.yml
@@ -82,7 +82,28 @@ params:
         # - name: Phone
         #   url: "img/phone.png"
 
-
+menu:
+    main:
+       #  - identifier: categories
+        #  name: 分类
+        #  url: /categories/
+         # weight: 10
+        - identifier: tags
+          name: 标签
+          url: /tags/
+          weight: 20
+        - identifier: archives
+          name: 归档
+          url: /archives/
+          weight: 30
+        - identifier: search
+          name: 搜索
+          url: /search/
+          weight: 40
+        - identifier: links
+          name: 链接
+          url: /links/
+          weight: 60
     # editPost:
     #     URL: "https://github.com/adityatelange/hugo-PaperMod/tree/exampleSite/content"
     #     Text: "Suggest Changes" # edit text
