--- a/config.yml
+++ b/config.yml
@@ -1,86 +1,131 @@
-baseURL: "https://iblog.zone.id/"
-title: 子 曰
+baseURL: https://iblog.zone.id/
 languageCode: zh-cn
 defaultContentLanguage: zh
+title: 子曰
 theme: PaperMod
-# paginate: 5
 
+enableRobotsTXT: true
+buildDrafts: false
+buildFuture: false
+buildExpired: false
 
-minify:  #启用或禁用文件压缩（缩小）功能。
-  disableXML: true #禁用 XML 文件的压缩。
-  minifyOutput: true #启用输出文件压缩。
+# googleAnalytics: UA-123-45
+minify:
+disableXML: true
+minifyOutput: true
 
 params:
-  env: production # 设置站点的环境。to enable google analytics, opengraph, twitter-cards and schema.
-  title: 子 曰 #站点的名称。
-  description: "学而时习之，不亦说乎。" #站点的简短描述。
-  keywords: [博客,日常,思考] #站点的关键词。
-  # author: Me #站点的作者名称。
-  # author: ["Me", "You"] # multiple authors
-  # images: ["<link or path of image for opengraph, twitter-cards>"] #用于 OpenGraph 和 Twitter 卡片的图像链接。
-  DateFormat: "January 2, 2006" #设置日期格式。
-  defaultTheme: auto # dark, light  设置站点默认主题。
-  disableThemeToggle: false #是否禁用主题切换按钮。
+env: production # to enable google analytics, opengraph, twitter-cards and schema.
+title: 子曰
+description: "学而时习之，不亦说乎。"
+keywords: [博客,日常,思考]
+# author: ["Me", "You"] # multiple authors
+#images: ["<link or path of image for opengraph, twitter-cards>"]
+DateFormat: "January 2, 2006"
+defaultTheme: auto # dark, light
+disableThemeToggle: false # 显示切换主题
 
-  disableScrollToTop: false #是否禁用页面顶部滚动按钮。
-  comments: false #是否启用评论功能。 
-  hidemeta: true #是否隐藏元数据（如作者、发布日期等）。
-  hideSummary: false #是否隐藏文章摘要。
-  showtoc: false #是否显示目录
-  tocopen: false #目录是否默认展开。
+ShowReadingTime: false
+ShowShareButtons: false #分享按钮
+ShowPostNavLinks: true
+ShowBreadCrumbs: false #面包屑导航
+ShowCodeCopyButtons: true #代码片段显示复制
+disableSpecial1stPost: false
+disableScrollToTop: false #直接到顶,需在meta中增加
+comments: false #回复开关
+hidemeta: false
+hideSummary: false
+showtoc: true #显示目录
+tocopen: false
 
-  assets: #这一部分配置用于设置站点的图标和图像资源。
-    # disableHLJS: true # 禁用 highlight.js
-    # disableFingerprinting: true #禁用资源指纹 当设置为 true 时，Hugo 不会为站点的静态资源（如 CSS、JS 文件）添加版本号（指纹）。资源指纹通常用于缓存控制，通过文件名中的哈希值标识文件的版本。如果禁用指纹，文件的 URL 不会自动变更，可能影响缓存更新。
-    favicon: "/favicon.ico" #设置站点的 favicon 图标。
-    # favicon16x16: "/favicon.ico" #设置 16x16 像素大小的 favicon 图标。
-    # favicon32x32: "/favicon.ico" #设置 32x32 像素大小的 favicon 图标。
-    # apple_touch_icon: "/favicon.ico" #设置适用于 Apple 设备的触摸屏图标（如 iPhone、iPad）。
-    # safari_pinned_tab: "/favicon.ico" #设置用于 Safari 浏览器 的固定标签页图标。
+assets:
+# disableHLJS: true # to disable highlight.js
+# disableFingerprinting: true
+favicon: "/favicon.ico"
+#favicon16x16: "/favicon.ico"
+#favicon32x32: "/favicon.ico"
+#apple_touch_icon: "<link/ abs url>"
+#safari_pinned_tab: "<link/ abs url>"
 
-  label: #这一部分配置用于设置站点标签的文本和图标。
-    text: "子 曰" #设置标签的文本 这是显示在标签上的文本，通常用于表示站点的主页面或主页。这里设置为 Home，意味着标签上会显示“Home”这个文本。
-    icon: /favicon.ico #设置标签的图标。这是为标签指定的图标，通常是用于导航、按钮或应用图标的图像。在这里，/apple-touch-icon.png 指向一个图像文件，表示将这个文件作为图标使用。
-    iconHeight: 35 #设置标签图标的高度。
+label:
+text: "子 曰" #左上标题文字
+#icon: /apple-touch-icon.png
+#iconHeight: 35
 
-  homeInfoParams: 
-    Title: "Hello World \U0001F44B" #设置主页的欢迎标题。
-    Content: 江南可采莲，莲叶何田田。
+# profile-mode 另一种主题模式
+profileMode:
+enabled: false # needs to be explicitly set
+title: ExampleSite
+subtitle: "This is subtitle"
+imageUrl: "< img location>"
+imageWidth: 120
+imageHeight: 120
+imageTitle: my image
+buttons:
+- name: Posts
+url: posts
+- name: Tags
+url: tags
+
+# home-info mode
+homeInfoParams:
+Title: "Hello World \U0001F44B"
+Content: 欲买桂花同载酒，终不似，少年游。
+cover:
+hidden: true # hide everywhere but not in structured data
+hiddenInList: true # hide on list pages and home
+hiddenInSingle: true # hide on single page
+
+# editPost:
+URL: "https://github.com/<path_to_repo>/content"
+Text: "Suggest Changes" # edit text
+appendFilePath: true # to append file path to Edit link
+
+# for search
+# https://fusejs.io/api/options.html
+outputs:
+home:
+- HTML
+- RSS
+- JSON # is necessary
 
 
-  editPost: #这一部分配置用于设置在文章页面上显示的“编辑”链接，通常用于 GitHub 存储库中的内容，允许用户建议更改文章。
-    URL: "https://github.com/<path_to_repo>/content" #设置编辑链接的目标 URL。
-    Text: "Suggest Changes" # 设置显示在“编辑”按钮上的文本。
-    appendFilePath: true # 是否将文件路径附加到编辑链接。
-  # for search 这部分没有直接的配置，而是一个注释，指向了一个搜索库 Fuse.js 的 API 选项链接。Fuse.js 是一个轻量级的 JavaScript 库，通常用于实现客户端搜索功能。你可以根据链接中的文档调整搜索配置，以满足站点的搜索需求。
-  # https://fusejs.io/api/options.html
-  fuseOpts: #这部分配置用于设置 Fuse.js 搜索库的选项，Fuse.js 是一个 JavaScript 库，通常用于客户端实现模糊搜索。你可以配置搜索行为来控制搜索的精度和灵敏度。
-
-    isCaseSensitive: false #是否启用区分大小写的搜索。
-    shouldSort: true #是否启用搜索结果排序。
-    location: 0 #控制搜索匹配位置的权重。
-    distance: 1000 #控制模糊搜索的“距离”。
-    threshold: 0.4 #设置搜索匹配的精度阈值。
-    minMatchCharLength: 0 #设置搜索最小匹配字符长度。
-    limit: 10 # 限制搜索返回的结果数量。
-    keys: ["title", "permalink", "summary", "content"] #指定搜索的字段。
-menu: #这部分配置用于定义站点的导航菜单，菜单通常显示在页面的顶部或侧边栏，提供访问不同页面或内容的链接。
-
-  main: #设置主导航菜单项。main 下的每一项定义了一个菜单项，包括标识符、名称、URL 和权重。
-    - identifier: tags #定义菜单项的标识符。
-      name: 标签 #设置菜单项的显示名称。
-      url: /tags/ #设置菜单项的链接地址。
-      weight: 20 #设置菜单项的权重。
-    - identifier: archives
-      name: 归档
-      url: /archives/
-      weight: 30
-    - identifier: search
-      name: 搜索
-      url: /search/
-      weight: 40
-    - identifier: links
-      name: 链接
-      url: /links/
-      weight: 50
-
+fuseOpts:
+isCaseSensitive: false
+shouldSort: true
+location: 0
+distance: 1000
+threshold: 0.4
+minMatchCharLength: 0
+keys: ["title", "permalink", "summary", "content"]
+menu:
+main:
+# - identifier: categories
+# name: 分类
+# url: /categories/
+# weight: 10
+- identifier: tags
+name: 标签
+url: /tags/
+weight: 20
+- identifier: archives
+name: 归档
+url: /archives/
+weight: 30
+- identifier: search
+name: 搜索
+url: /search/
+weight: 40
+- identifier: links
+name: 链接
+url: /links/
+weight: 60
+# Read: https://github.com/adityatelange/hugo-PaperMod/wiki/FAQs#using-hugos-syntax-highlighter-chroma
+# pygmentsUseClasses: true
+# markup:
+# highlight:
+# # anchorLineNos: true
+# codeFences: true
+# guessSyntax: true
+# lineNos: true
+# style: monokai
