--- a/config.yml
+++ b/config.yml
@@ -53,13 +53,17 @@ params:
     URL: "https://github.com/<path_to_repo>/content" #设置编辑链接的目标 URL。
     Text: "Suggest Changes" # 设置显示在“编辑”按钮上的文本。
     appendFilePath: true # 是否将文件路径附加到编辑链接。
-  # for search 这部分没有直接的配置，而是一个注释，指向了一个搜索库 Fuse.js 的 API 选项链接。Fuse.js 是一个轻量级的 JavaScript 库，通常用于实现客户端搜索功能。你可以根据链接中的文档调整搜索配置，以满足站点的搜索需求。
+  # for search
   # https://fusejs.io/api/options.html
-    outputs:
-      home:
-      - HTML
-      - RSS
-      - JSON # is necessary
+  fuseOpts:
+    isCaseSensitive: false
+    shouldSort: true
+    location: 0
+    distance: 1000
+    threshold: 0.4
+    minMatchCharLength: 0
+    limit: 10 # refer: https://www.fusejs.io/api/methods.html#search
+    keys: ["title", "permalink", "summary", "content"]
 
 menu: #这部分配置用于定义站点的导航菜单，菜单通常显示在页面的顶部或侧边栏，提供访问不同页面或内容的链接。
 
