--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: iblog.zone.id
+baseURL: "iblog.zone.id"
 languageCode: zh
 defaultContentLanguage: zh
 title: 子曰
@@ -75,10 +75,6 @@ fuseOpts:
   keys: ["title", "permalink", "summary", "content"]
 menu:
   main:
-  # - identifier: categories
-  # name: 分类
-  # url: /categories/
-  # weight: 10
     - identifier: tags
     name: 标签
     url: /tags/
