--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,7 @@
 # 基础配置
 baseURL: "https://iblog.zone.id/"  # 你的博客的根URL
 languageCode: "zh"  # 网站的默认语言代码
+defaultContentLanguage: "zh"
 title: "子曰"  # 博客的标题
 theme: "PaperMod"  # 使用的主题名称
 
@@ -55,11 +56,6 @@ params:
   ShowPostNavLinks: false  # 显示文章导航链接
   ShowBreadCrumbs: true  # 显示面包屑导航
   UseHugoToc: true #是否使用 Hugo 内置的目录功能。 
-  assets: #这一部分配置用于设置站点的图标和图像资源。
-    # disableHLJS: true # 禁用 highlight.js
-    # disableFingerprinting: true #禁用资源指纹 当设置为 true 时，Hugo 不会为站点的静态资源（如 CSS、JS 文件）添加版本号（指纹）。资源指纹通常用于缓存控制，通过文件名中的哈希值标识文件的版本。如果禁用指纹，文件的 URL 不会自动变更，可能影响缓存更新。
-    favicon: "/favicon.ico" #设置站点的 favicon 图标。
-
   homeInfoParams:
     Title: "Hello World \U0001F44B"
     Content: 欲买桂花同载酒，终不似，少年游。
