--- a/config.yml
+++ b/config.yml
@@ -77,5 +77,5 @@ params:
     distance: 1000
     threshold: 0.4
     minMatchCharLength: 0
-    keys: ["title", "permalink", "summary"]
+    keys: ["title", "permalink", "summary", "content"]
 
