--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,6 @@
 baseURL: "https://iblog.zone.id"  # 你的博客的根URL
 languageCode: "zh-cn"  # 网站的默认语言代码
+defaultContentLanguage: "zh-cn"
 title: "子曰"  # 博客的标题
 theme: "PaperMod"  # 使用的主题名称
 
