--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
 baseURL: "https://iblog.zone.id"
-languageCode: "zh-cn"  
+languageCode: "zh"  
 title: 子曰
 paginate: 5
 theme: PaperMod
@@ -86,15 +86,15 @@ params:
       - "HTML"
       - "RSS"
       - "JSON"  # 用于搜索功能
-
-  fuseOpts:
-    isCaseSensitive: false
-    shouldSort: true
-    location: 0
-    distance: 1000
-    threshold: 0.4
-    minMatchCharLength: 0
-    keys: ["title", "permalink", "summary", "content"]
+  params:
+    fuseOpts:
+      isCaseSensitive: false
+      shouldSort: true
+      location: 0
+      distance: 1000
+      threshold: 0.4
+      minMatchCharLength: 0
+      keys: ["title", "permalink", "summary", "content"]
     
 menu:
   main:
