--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,6 @@
 baseURL: "https://iblog.zone.id"
 languageCode: "zh"  
+defaultContentLanguage: "zh"  
 title: 子曰
 paginate: 5
 theme: PaperMod
@@ -80,21 +81,20 @@ params:
     hiddenInList: true # hide on list pages and home
     hiddenInSingle: true # hide on single page
 
-
-  outputs:
-    home:
-      - "HTML"
-      - "RSS"
-      - "JSON"  # 用于搜索功能
-  params:
-    fuseOpts:
-      isCaseSensitive: false
-      shouldSort: true
-      location: 0
-      distance: 1000
-      threshold: 0.4
-      minMatchCharLength: 0
-      keys: ["title", "permalink", "summary", "content"]
+outputs:
+  home:
+    - "HTML"
+    - "RSS"
+    - "JSON"  # 用于搜索功能
+params:
+  fuseOpts:
+    isCaseSensitive: false
+    shouldSort: true
+    location: 0
+    distance: 1000
+    threshold: 0.4
+    minMatchCharLength: 0
+    keys: ["title", "permalink", "summary", "content"]
     
 menu:
   main:
