--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: "https://aa.zhoulove.cn"
+baseURL: "https://b.zhoulove.cn"
 languageCode: "zh"  
 defaultContentLanguage: "zh"  
 title: 子曰
