--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-
+# 添加 Node.js 版本设置步骤
+      - name: Setup Node.js
+        uses: actions/setup-node@v4  # 官方 Node.js 环境配置 Action
+        with:
+          node-version: '20.x'  # 指定需要的 Node.js 版本（例如 16.x、18.x、20.x 等）
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
